<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">KHClub</string>
    <string name="hello_world">Hello world!</string>
    <string name="uploading">Uploading..</string>
    <string name="downloading">Loading</string>
    <string name="uploading_success">Upload Completed</string>
    <string name="downloading_success">Download Completed</string>
    <string name="uploading_fail">Upload Fail</string>
    <string name="downloading_fail">Download Fail</string>
    <string name="edit_remark">Edit Remark</string>
    <string name="share_card">Share Card</string>
    <string name="switch_style">Switch style</string>
    <string name="loading">Loading..</string>
    <string name="search_fail">No result</string>
    <string name="net_error">Net exception.</string>
    <string name="alert_save">Save</string>
    <string name="alert_title">Prompt</string>
    <string name="alert_confirm">Confirm</string>
    <string name="alert_cancel">Cancel</string>
    <string name="alert_close">Close</string>
    <string name="alert_finish">Finish</string>
    <string name="next">Next</string>
    <string name="delete_friend">Remove Friend</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="all_picture">All picture</string>
    <string name="select_picture">Select no_pictures</string>
    <string name="no_pictures">No pictures</string>
    <string name="no_external_storage">No external storage</string>
    <string name="save_picture">Save picture</string>
    <string name="save_picture_as">Save picture to</string>
    <string name="save_picture_fail">Save picture fail</string>
    <string name="login_please_enter_phonenum">Please enter phone number</string>
    <string name="login_login_register">Login/Register</string>
    <string name="login_wait_a_minute">Wait a minute</string>
    <string name="login_username_not_null">Username can\'t be empty</string>
    <string name="login_password_not_null">Password can\'t be empty</string>
    <string name="login_loginning">Logining</string>
    <string name="login_login_title">Login</string>
    <string name="login_password_error">Username or password error</string>
    <string name="login_black_list">You have been banned</string>
    <string name="login_forgot_password">forgot password?</string>
    <string name="login_please_enter_password">Please enter password</string>
    <string name="login_verification_not_null">Verification code can\'t be empty</string>
    <string name="login_password_length_six">Password length of at least six</string>
    <string name="login_register_successful">Success</string>
    <string name="pwd_update_successful">Success</string>
    <string name="login_modify_password">Password</string>
    <string name="login_register_title">Register</string>
    <string name="login_verification_send">Sent to</string>
    <string name="notification">Notification</string>
    <string name="login_resend">resend</string>
    <string name="login_verification_arrivied">Verification code has arrived</string>
    <string name="login_verification_error">Verification code or phone number error</string>
    <string name="login_please_enter_verification">Please enter verification</string>
    <string name="login_password_length" tools:ignore="TypographyDashes">Password length 6-32 characters</string>
    <string name="select_area_code">Select area code</string>
    <string name="just_recently">Just now</string>
    <string name="minutes_ago">Minutes ago</string>
    <string name="hour_ago">Hours ago</string>
    <string name="yesterday">Yesterday</string>
    <string name="day_before_yesterday">Day before yesterday</string>
    <string name="month">Month</string>
    <string name="day">Day</string>
    <string name="year">Year</string>
    <string name="circle_name">Circle Name</string>
    <string name="main_home_title">Square</string>
    <string name="main_msg_title">Message</string>
    <string name="main_contact_title">Contact</string>
    <string name="main_me_title">Card</string>
    <string name="personal_me_title">Card</string>
    <string name="personal_signature">Signature</string>
    <string name="personal_icon">Icon</string>
    <string name="personal_name">Name</string>
    <string name="personal_remark">Remark</string>
    <string name="personal_job">Job</string>
    <string name="personal_company">Company</string>
    <string name="personal_address">Address</string>
    <string name="personal_sex">Sex</string>
    <string name="personal_email">Email</string>
    <string name="personal_phone">Phone</string>
    <string name="personal_enter_name">Please enter name</string>
    <string name="personal_enter_remark">Please enter remark</string>
    <string name="personal_enter_job">Please enter job</string>
    <string name="personal_enter_sign">Please enter sign</string>
    <string name="personal_enter_address">Please enter address</string>
    <string name="personal_enter_email">Please enter email</string>
    <string name="personal_enter_phone">Please enter phone</string>
    <string name="personal_sex_male">Man</string>
    <string name="personal_sex_female">Woman</string>
    <string name="personal_name_not_null">Name can\'t be empty</string>
    <string name="personal_name_too_long">Name too long</string>
    <string name="personal_remark_too_long">Remark too long</string>
    <string name="personal_none">None</string>
    <string name="personal_friends_can_see">Only friends can see</string>
    <string name="personal_no_person">Don\'t exist</string>
    <string name="personal_add_friend">Add</string>
    <string name="personal_send_message">Send Message</string>
    <string name="personal_moments">Moments</string>
    <string name="other_moments">Her Moments</string>
    <string name="other_circle">Other Circle</string>
    <string name="circles_title">Circles</string>
    <string name="personal_no_moments">No Moments</string>
    <string name="personal_clear_cache">Clear Cache</string>
    <string name="personal_version">Version</string>
    <string name="personal_clear_ok">Clear OK</string>
    <string name="personal_confirm_logout">Log out？</string>
    <string name="personal_new_version">New version found</string>
    <string name="personal_is_lastest_version">Is the lastest version</string>
    <string name="personal_share_ok">Share OK</string>
    <string name="personal_share_fail">Share fail</string>
    <string name="personal_setting">Setting</string>
    <string name="personal_edit">Edit</string>
    <string name="personal_news">Personal News</string>
    <string name="personal_title">Title</string>
    <string name="personal_title_prompt">Introduce your self</string>
    <string name="personal_title_too_long">Content too long</string>
    <string name="collect_success">Collect success</string>
    <string name="collect_fail">Collect fail</string>
    <string name="cancel_collect_success">Cancel the collection success</string>
    <string name="cancel_collect_fail">Cancel the collection fail</string>
    <string name="person_qrcode_prompt">Scan and exchange business cards</string>
    <string name="investment">Investment</string>
    <string name="business_trade">Business And Trade</string>
    <string name="tea">Tea</string>
    <string name="liquor_cigar">Liquor And Cigar</string>
    <string name="money">Money</string>
    <string name="artwork">Artwork</string>
    <string name="travel">Travel</string>
    <string name="golf">Golf</string>
    <string name="college">College</string>
    <string name="luxury">Luxury</string>
    <string name="car_yacht">Car And Yacht</string>
    <string name="other">Other</string>
     <string name="choice_category">Choice category</string>
    <string name="already_follow">Already Follow</string>
    <string name="send_notice">Send Notice</string>
    <string name="confirm_delete_notice">Confirm Delete Notice</string>
    <string name="notice_details">Notice Details</string>
    <string name="announcement_content_too_long">In the 140 - word</string>
    <string name="circle_master">Circle Master</string>
    <string name="circle_announcement">Circle Announcement</string>
    <string name="circle_member">Circle Member</string>
    <string name="circle_web">Circle Web</string>
    <string name="circle_qrcode">WeiXin QRcode</string>
    <string name="wx_num">WeiXin number</string>
    <string name="circle_no_follow">you are not following this circle, can\'t comment</string>
    <string name="circle_phone">Circle Phone</string>
    <string name="circle_address">Circle Address</string>
    <string name="circle_info">Circle Introduce</string>
    <string name="edit_circle">Edit Circle</string>
    <string name="all_members">All Members</string>
    <string name="publish_circle_from">From：</string>
    <string name="choice_circle">Choice Cirlce</string>
    <string name="choice_circle_none">You need to choice a circle</string>
    <string name="modify_circle">Modify Circle</string>
    <string name="circle_attention_fail">Follow Fail</string>
    <string name="create_circle_introduce">Club Introduce</string>
    <string name="create_circle_name">Club Name</string>
    <string name="circle_name_limit">Content can\'t exceed 7 characters</string>
    <string name="circle_introduce_limit">Content can\'t exceed 200 characters</string>
    <string name="create_circle_title">Create Club</string>
    <string name="create_uploading_cover">Uploading Cover</string>
    <string name="club_main_page">Club Page</string>
    <string name="news_club_expert">Club Expert</string>
    <string name="news_circle_friend">Club Friend:</string>
    <string name="news_master_name">Master Name:</string>
    <string name="news_circle_name">Circle Name:</string>
    <string name="circle_recommend_type_name">Recommend Circle</string>
    <string name="circle_attention_type_name">My Circle</string>
    <string name="news_news_topic">Dynamic</string>
    <string name="news_circle_title">Circle</string>
    <string name="news_circle_intro">Circle Intro</string>
    <string name="news_circle_detail_title">Circle</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_delete">Confirm delete？</string>
    <string name="confirm_clear">Confirm clear？</string>
    <string name="reply">reply</string>
    <string name="news_enter_content">Please enter content</string>
    <string name="news_where">Where</string>
    <string name="news_content_image_empty">Pictures and content both empty!</string>
    <string name="news_content_too_long">Content can\'t exceed 140 characters</string>
    <string name="news_publish_success">Success</string>
    <string name="news_publish_fail">Fail</string>
    <string name="news_publish">Publish</string>
    <string name="news_push_delete">Delete</string>
    <string name="news_push_like">Like</string>
    <string name="news_enter_comment_content">Please enter content</string>
    <string name="news_detail_title">Detail</string>
    <string name="news_publish_commenting">Loading</string>
    <string name="news_delete_success">Delete success</string>
    <string name="news_delete_fail">Delete fail</string>
    <string name="news_comment">Comment</string>
    <string name="news_like">Like</string>
    <string name="contact_none">None</string>
    <string name="contact_add_friend">Contact</string>
    <string name="contact_add">Add</string>
    <string name="contact_added">Added</string>
    <string name="modify_fail">Modify Fail</string>
    <string name="modify_success">Modify Success</string>
    <string name="publish_news">Send</string>
    <string name="text_ack_msg">Read</string>
    <string name="im_qrcode">QRcode</string>
    <string name="scan_qr_code">Scan QR code</string>
    <string name="search_to_add">Search</string>
    <string name="new_group">New group</string>
    <string name="my_qr_code">My QR code</string>
</resources>