<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include
        android:id="@+id/title_bar"
        layout="@layout/layout_title_bar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/main_deep_white" >

        <TextView
            android:id="@+id/text_label"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:gravity="center_vertical"
            android:text="已选择"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/chioce_circle_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="12dp"
            android:layout_toRightOf="@id/text_label"
            android:background="@drawable/round_lable_press"
            android:gravity="center_vertical"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:gravity="center_vertical"
            android:text="(只能选择一项)"
            android:textColor="@color/main_light_white" />
    </RelativeLayout>

    <RelativeLayout
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main_deep_white" >

        <LinearLayout
            android:id="@+id/root1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:paddingLeft="23dp"
            android:paddingRight="10dp" >

            <TextView
                android:id="@+id/circle_lable1"
                android:layout_width="77dp"
                android:layout_height="30dp"
                android:background="@drawable/round_lable_border"
                android:gravity="center"
                android:text="@string/investment"
                android:textColor="@color/main_gold"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/circle_lable2"
                android:layout_width="77dp"
                android:layout_height="30dp"
                android:layout_marginLeft="20dp"
                android:background="@drawable/round_lable_border"
                android:gravity="center"
                android:text="@string/business_trade"
                android:textColor="@color/main_gold"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/circle_lable3"
                android:layout_width="77dp"
                android:layout_height="30dp"
                android:layout_marginLeft="20dp"
                android:background="@drawable/round_lable_border"
                android:gravity="center"
                android:text="@string/tea"
                android:textColor="@color/main_gold"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/root2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/root1"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:paddingLeft="23dp"
            android:paddingRight="10dp" >

            <TextView
                android:id="@+id/circle_lable4"
                android:layout_width="77dp"
                android:layout_height="30dp"
                android:background="@drawable/round_lable_border"
                android:gravity="center"
                android:text="@string/liquor_cigar"
                android:textColor="@color/main_gold"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/circle_lable5"
                android:layout_width="77dp"
                android:layout_height="30dp"
                android:layout_marginLeft="20dp"
                android:background="@drawable/round_lable_border"
                android:gravity="center"
                android:text="@string/money"
                android:textColor="@color/main_gold"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/circle_lable6"
                android:layout_width="77dp"
                android:layout_height="30dp"
                android:layout_marginLeft="20dp"
                android:background="@drawable/round_lable_border"
                android:gravity="center"
                android:text="@string/artwork"
                android:textColor="@color/main_gold"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/root3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/root2"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:paddingLeft="23dp"
            android:paddingRight="10dp" >

            <TextView
                android:id="@+id/circle_lable7"
                android:layout_width="77dp"
                android:layout_height="30dp"
                android:background="@drawable/round_lable_border"
                android:gravity="center"
                android:text="@string/travel"
                android:textColor="@color/main_gold"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/circle_lable8"
                android:layout_width="77dp"
                android:layout_height="30dp"
                android:layout_marginLeft="20dp"
                android:background="@drawable/round_lable_border"
                android:gravity="center"
                android:text="@string/golf"
                android:textColor="@color/main_gold"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/circle_lable9"
                android:layout_width="77dp"
                android:layout_height="30dp"
                android:layout_marginLeft="20dp"
                android:background="@drawable/round_lable_border"
                android:gravity="center"
                android:text="@string/college"
                android:textColor="@color/main_gold"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/root4"
            android:layout_below="@id/root3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:paddingLeft="23dp"
            android:paddingRight="10dp" >

            <TextView
                android:id="@+id/circle_lable10"
                android:layout_width="77dp"
                android:layout_height="30dp"
                android:background="@drawable/round_lable_border"
                android:gravity="center"
                android:text="@string/luxury"
                android:textColor="@color/main_gold"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/circle_lable11"
                android:layout_width="77dp"
                android:layout_height="30dp"
                android:layout_marginLeft="20dp"
                android:background="@drawable/round_lable_border"
                android:gravity="center"
                android:text="@string/car_yacht"
                android:textColor="@color/main_gold"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/circle_lable12"
                android:layout_width="77dp"
                android:layout_height="30dp"
                android:layout_marginLeft="20dp"
                android:background="@drawable/round_lable_border"
                android:gravity="center"
                android:text="@string/other"
                android:textColor="@color/main_gold"
                android:textSize="14sp" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>