<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/round_corner_background"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/name_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dip"
        android:paddingLeft="20dip"
        android:paddingTop="10dip"
        android:text="@string/personal_name"
        android:textColor="@color/main_deep_black"
        android:textSize="@dimen/font_size_medium" />

    <EditText
        android:id="@+id/name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:layout_marginTop="15dip"
        android:background="@color/main_clear_gary"
        android:gravity="left|center"
        android:hint="@string/personal_enter_name"
        android:inputType="text"
        android:maxLength="10"
        android:paddingLeft="5dp"
        android:textColor="@color/main_deep_black"
        android:textColorHint="@color/main_deep_gary" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dip"
        android:layout_marginRight="20dip"
        android:layout_marginTop="30dip"
        android:gravity="right"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_custom_alert_dialog_cancel"
            android:layout_width="90dp"
            android:layout_height="35dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/selector_dialog_cancel_btn_click"
            android:gravity="center"
            android:text="@string/alert_cancel"
            android:textColor="@color/main_deep_black"
            android:textSize="@dimen/font_size_medium" />

        <TextView
            android:id="@+id/tv_custom_alert_dialog_confirm"
            android:layout_width="90dp"
            android:layout_height="35dp"
            android:background="@drawable/selector_dialog_confirm_btn_click"
            android:gravity="center"
            android:text="@string/alert_confirm"
            android:textColor="@color/main_deep_black"
            android:textSize="@dimen/font_size_medium" />
    </LinearLayout>

</LinearLayout>