<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_qr_root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#44000000"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/main_deep_white"
        android:orientation="vertical"
        android:padding="10dp" >

        <TextView
            android:id="@+id/txt_qr_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/app_name"
            android:text="@string/im_qrcode"
            android:textColor="@color/main_deep_black"
            android:textSize="@dimen/font_size_small" />

        <ImageView
            android:id="@+id/img_qr_code"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:scaleType="centerCrop" />

        <TextView
            android:id="@+id/txt_qr_prompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/app_name"
            android:text="@string/scan_qr_code"
            android:textColor="@color/main_deep_black"
            android:textSize="@dimen/font_size_small" />
    </LinearLayout>

</LinearLayout>