<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_deep_black"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/layout_share_card"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/main_deep_black"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="10dp" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:contentDescription="@string/app_name"
            android:text="@string/share_card"
            android:textColor="@color/main_deep_white"
            android:textSize="@dimen/font_size_small" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_switch_card"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/main_deep_black"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="10dp" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/switch_style"
            android:textColor="@color/main_deep_white"
            android:textSize="@dimen/font_size_small" />
    </LinearLayout>

</LinearLayout>