<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/register_activity"
    android:gravity="center_horizontal">
    
	<ImageView
	    android:src="@drawable/login_back_image"
	    android:scaleType="centerCrop" 
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"/> 

    <include layout="@layout/layout_title_bar" />

    <TextView
        android:id="@+id/phone_prompt_textview"
        android:textSize="@dimen/font_size_medium"
        android:textColor="@color/main_deep_black"   
        android:layout_centerHorizontal="true"
        android:layout_marginTop="110dip"        
        android:layout_width="280dip"
        android:layout_height="wrap_content"
        android:text="@string/login_verification_send" />  
        
    <LinearLayout 
        android:id="@+id/verificationcode_layout"
        android:layout_marginTop="150dip"
        android:layout_width="280dip"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
		android:gravity="center"
        android:layout_height="wrap_content">
     <EditText
         android:id="@+id/verificationcode_edittext"
         android:layout_width="200dip"
         android:layout_height="wrap_content"
         android:drawablePadding="10dp"
         android:maxLength="6"
         android:padding="5dip"
         android:background="@color/main_clear"
         android:hint="@string/login_please_enter_verification"
         android:textColorHint="@color/login_edit_hint_color"   
         android:textColor="@color/main_deep_black"      
         android:singleLine="true"
         android:textSize="@dimen/font_size_medium" />  
    <TextView
        android:id="@+id/revalidated_textview"
        android:textSize="@dimen/font_size_small"
        android:textColor="@color/main_brown"
        android:background="@drawable/login_button"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="30dip"
        android:text="@string/login_resend" />             
     
    </LinearLayout>
    
     <ImageView
         android:layout_alignLeft="@+id/verificationcode_layout"
         android:layout_below="@+id/verificationcode_layout" 
         android:background="@drawable/login_edit_text_view"
         android:layout_marginTop="5dip"
         android:layout_width="280dip"
         android:layout_height="1dip"/>        
    
     <EditText
         android:layout_below="@+id/verificationcode_layout"
         android:id="@+id/passwd_edittext"
         android:layout_marginTop="30dip"
         android:layout_centerHorizontal="true"
         android:layout_width="280dip"
         android:layout_height="wrap_content"
         android:drawablePadding="10dp"
         android:maxLength="24"
         android:padding="5dip"
         android:background="@color/main_clear"
         android:hint="@string/login_please_enter_password"
         android:textColorHint="@color/login_edit_hint_color"   
         android:textColor="@color/main_deep_black"      
         android:singleLine="true"
         android:inputType="textPassword"
         android:textSize="@dimen/font_size_medium" />  
    
     <ImageView
         android:layout_alignLeft="@+id/passwd_edittext"
         android:layout_below="@+id/passwd_edittext" 
         android:background="@drawable/login_edit_text_view"
         android:layout_width="280dip"
         android:layout_height="1dip"/>      
     
     <TextView
         android:layout_width="wrap_content" 
         android:layout_height="wrap_content"
         android:textSize="@dimen/font_size_tiny"
         android:layout_marginTop="10dip"
         android:text="@string/login_password_length"
         android:textColor="@color/main_brown"
         android:layout_below="@+id/passwd_edittext"
         android:layout_centerHorizontal="true"/>
    
     <Button
         android:layout_centerHorizontal="true"
         android:id="@+id/next_button"
         android:layout_below="@id/passwd_edittext"
         android:textSize="@dimen/font_size_small"
         android:textColor="@color/main_brown"
         android:layout_width="280dip"
         android:background="@drawable/login_button"
         android:layout_height="45dip"
         android:layout_marginTop="40dip"
         android:text="@string/alert_finish" />       
     
</RelativeLayout>