<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/main_deep_black"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/layout_scanQR"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/main_deep_black"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="10dp" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:src="@drawable/icon_menu_qr_scan" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:contentDescription="@string/app_name"
            android:text="@string/scan_qr_code"
            android:textColor="@color/main_deep_white"
            android:textSize="@dimen/font_size_small" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_search"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/main_deep_black"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="10dp" >

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_menu_add_friend" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/search_to_add"
            android:textColor="@color/main_deep_white"
            android:textSize="@dimen/font_size_small" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_create_group"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/main_deep_black"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="10dp" >

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_menu_new_group" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/new_group"
            android:textColor="@color/main_deep_white"
            android:textSize="@dimen/font_size_small" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_user_QRcard"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/main_deep_black"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="10dp" >

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_menu_my_qr_code" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/my_qr_code"
            android:textColor="@color/main_deep_white"
            android:textSize="@dimen/font_size_small" />
    </LinearLayout>

</LinearLayout>